--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <p> <i class="fas fa-fw fa-clock"></i>17:00 WIB - Selesai</p>
                 <p> <i class="fas fa-fw fa-location-dot"></i>Rumah Ayuk Meri Mirnawati</p>
                 <!-- link untuk generator calendar : https://decomaan.github.io/google-calendar-link-generator/ -->
-                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Akad+Nikah+AK&details=Akad+Nikah+%23KUA&location=Gedung+Masa+Depan+Kami&dates=20250525T010000Z%2F20250525T050000Z" 
+                <a href="https://calendar.app.google/znDR9z1Bw92bPkYcA" 
                 class="btn btn-lg btn-pink rounded-pill" target="_blank">
                   <i class=" fas fa-fw fa-calendar-day"></i>Simpan ke Kalender</a>
               </div>
@@ -169,7 +169,7 @@
               <div class="col-lg-12 text-center">
                 <a href="https://maps.app.goo.gl/5QbUUo7UraqFxevH8" target="_blank" class="btn btn-lg btn-pink rounded-pill mb-4">
                   <i class="fas fa-fw fa-location-dot"></i>Klik untuk Membuka Peta</a>
-                  <iframe src="https://www.google.com/maps/embed?pb=!4v1741930868035!6m8!1m7!1sQngSzmk-jtsFDnfxOR-TZQ!2m2!1d-4.465277799402953!2d102.9004399320506!3f57.17588783358259!4f-17.116254284330225!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!4v1741930868035!6m8!1m7!1sQngSzmk-jtsFDnfxOR-TZQ!2m2!1d-4.465277799402953!2d102.9004399320506!3f57.17588783358259!4f-17.116254284330225!5f0.7820865974627469" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
