--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
               <h1 class="text-pink huruf-sambung fw-bold">Lokasi Buka Bersama Muda Mudi BPS Kabupaten Bengkulu Selatan</h1>
             </div>
             <div class="row justify-content-center">
-              <div class="col-lg-12 text-center">
+              <div class="col-lg-8 text-center">
                 <a href="https://maps.app.goo.gl/5QbUUo7UraqFxevH8" target="_blank" class="btn btn-lg btn-pink rounded-pill mb-4">
                   <i class="fas fa-fw fa-location-dot"></i>Klik untuk Membuka Peta</a>
-                  <iframe src="https://www.google.com/maps/embed?pb=!4v1741930868035!6m8!1m7!1sQngSzmk-jtsFDnfxOR-TZQ!2m2!1d-4.465277799402953!2d102.9004399320506!3f57.17588783358259!4f-17.116254284330225!5f0.7820865974627469" height="450" style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!4v1741930868035!6m8!1m7!1sQngSzmk-jtsFDnfxOR-TZQ!2m2!1d-4.465277799402953!2d102.9004399320506!3f57.17588783358259!4f-17.116254284330225!5f0.7820865974627469" width="640" height="360" style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
