--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="col-lg-1 col-3"><div class="text-center p-2 rounded text-light"><h5>0</h5>Detik</div></div>
         </div> -->
         <a href="#pembuka-section" class="rounded-pill btn btn-lg btn-get-started py-3"> 
-          <i class="fas fa-fw fa-envelope-open-text"></i>Buka Undangan</a>
+          <i class="fas fa-fw fa-envelope-open-text"></i>Buka Undangan</a> <br> <br>
       </div>
     </section>
     
