--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
           <div class="row justify-content-center">
             <div class="col-8 text-center">
-              <video width="360" height="360" controls>
+              <video height="360" controls>
                 <source src="assets/img/gallery/WhatsApp Video 2025-03-14 at 16.27.15 (1).mp4" type="video/mp4">
                 <source src="video.ogg" type="video/ogg">
                Video Kita
@@ -358,7 +358,7 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-8 text-center">
-              <video width="360" height="360" controls>
+              <video height="360" controls>
                 <source src="assets/img/gallery/WhatsApp Video 2025-03-14 at 16.27.15.mp4" type="video/mp4">
                 <!-- <source src="video.ogg" type="video/ogg"> -->
                 Video Kita
