--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           </div>
 
           <div class="row justify-content-center">
-            <div class="col-8 text-center overflow-hidden">
+            <div class="col-sm-3 col-lg-2 mb-2 overflow-hidden">
               <video height="360" controls>
                 <source src="assets/img/gallery/WhatsApp Video 2025-03-14 at 16.27.15 (1).mp4" type="video/mp4">
                 <source src="video.ogg" type="video/ogg">
@@ -357,7 +357,7 @@
             </div>
           </div>
           <div class="row justify-content-center">
-            <div class="col-8 text-center">
+            <div class="col-sm-3 col-lg-2 mb-2">
               <video height="360" controls>
                 <source src="assets/img/gallery/WhatsApp Video 2025-03-14 at 16.27.15.mp4" type="video/mp4">
                 <!-- <source src="video.ogg" type="video/ogg"> -->
