--- a/index.html
+++ b/index.html
@@ -346,9 +346,11 @@
               <img src="assets/img/gallery/15.jpeg" alt="KITA" class="card-img border-pink">
             </a>
           </div>
+          
 
           <div class="row justify-content-center">
-            <div class="col-sm-3 col-lg-2 mb-2 overflow-hidden">
+            <div class="row" data-mansory='{"percentPosition": true}'>
+              <div class="col-sm-3 col-lg-2 mb-2 overflow-hidden">
               <video height="360" controls>
                 <source src="assets/img/gallery/WhatsApp Video 2025-03-14 at 16.27.15 (1).mp4" type="video/mp4">
                 <source src="video.ogg" type="video/ogg">
@@ -364,7 +366,8 @@
                 Video Kita
               </video>
             </div>
-          </div>       
+          </div>
+        </div>
       </div>
     </section>
 
