--- a/index.html
+++ b/index.html
@@ -351,24 +351,25 @@
           <div class="row justify-content-center">
             <div class="row" data-mansory='{"percentPosition": true}'>
               <div class="col-sm-3 col-lg-2 mb-2 overflow-hidden">
-              <video height="360" controls>
-                <source src="assets/img/gallery/WhatsApp Video 2025-03-14 at 16.27.15 (1).mp4" type="video/mp4">
-                <source src="video.ogg" type="video/ogg">
-               Video Kita
-              </video>
-            </div>
+                <video height="360" controls>
+                  <source src="assets/img/gallery/WhatsApp Video 2025-03-14 at 16.27.15 (1).mp4" type="video/mp4">
+                  <source src="video.ogg" type="video/ogg">
+                 Video Kita
+                </video>
+              </div>
           </div>
-          <div class="row justify-content-center">
-            <div class="col-sm-3 col-lg-2 mb-2">
-              <video height="360" controls>
-                <source src="assets/img/gallery/WhatsApp Video 2025-03-14 at 16.27.15.mp4" type="video/mp4">
-                <!-- <source src="video.ogg" type="video/ogg"> -->
-                Video Kita
-              </video>
+            
+          <div class="row justify-content-left">
+            <div class="row" data-mansory='{"percentPosition": true}'>
+              <div class="col-sm-3 col-lg-2 mb-2">
+                <video height="360" controls>
+                  <source src="assets/img/gallery/WhatsApp Video 2025-03-14 at 16.27.15.mp4" type="video/mp4">
+                  <!-- <source src="video.ogg" type="video/ogg"> -->
+                  Video Kita
+                </video>
+              </div>
             </div>
-          </div>
         </div>
-      </div>
     </section>
 
     <!-- rsvp section -->
