--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
  
     <!-- css -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
-  <body class="overflow-hidden">
+  <body class="transition noscroll">
     <!-- music -->
     <audio src="assets/audio/Gempi - Ajaib (Official Music Video).mp3" loop class="music"></audio>
     <!-- sfx door -->
